added a hierarchy of kitchenware

--- a/mpl-cpp-lab1/mpl-cpp-lab1.vcxproj
+++ b/mpl-cpp-lab1/mpl-cpp-lab1.vcxproj
@@ -138,6 +138,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="kitchenware.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="interface.cpp" />
+    <ClCompile Include="kitchenware.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
